--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Timeline",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/styled-components": "^5.1.2",
+    "@types/theme-ui": "^0.3.6",
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.24.41",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-offline": "^3.2.23",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.26",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-feather": "^2.0.8",
+    "react-helmet": "^6.1.0",
+    "react-video-cover": "^1.2.2",
+    "styled-components": "^5.1.1",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
